@@ -22,20 +22,38 @@ public class UserRateLimiterFilter implements WebFilter {
 
     @Override
     public Mono<Void> filter(ServerWebExchange exchange, @NonNull WebFilterChain chain) {
+        if (RateLimiterService.shouldBypassRateLimit(exchange)) {
+            return chain.filter(exchange);
+        }
+
         return getEmailFromContext()
                 .defaultIfEmpty("")
                 .flatMap(email -> {
-                    if (email == null || email.trim().isEmpty()) {
+                    if (email == null || email.isBlank()) {
                         return chain.filter(exchange);
                     }
 
-                    return rateLimiterService.isEmailAllowed(email)
-                            .flatMap(allowed -> {
-                                if (!allowed) {
-                                    return reject(exchange);
+                    // 1. User Rate Limit
+                    return rateLimiterService.isUserRateAllowed(email)
+                            .flatMap(rateAllowed -> {
+                                if (!rateAllowed) {
+                                    log.error("Too many requests from user: {}", email);
+                                    exchange.getResponse().setStatusCode(HttpStatus.TOO_MANY_REQUESTS);
+                                    return exchange.getResponse().setComplete();
                                 }
 
-                                return chain.filter(exchange);
+                                // 2. User Concurrency Throttle
+                                return rateLimiterService.acquireUserConcurrency(email)
+                                        .flatMap(concurrencyAllowed -> {
+                                            if (!concurrencyAllowed) {
+                                                log.error("Too many simultaneous requests for user: {}", email);
+                                                exchange.getResponse().setStatusCode(HttpStatus.TOO_MANY_REQUESTS);
+                                                return exchange.getResponse().setComplete();
+                                            }
+
+                                            return chain.filter(exchange)
+                                                    .doFinally(signalType -> rateLimiterService.releaseUserConcurrency(email).subscribe());
+                                        });
                             });
                 });
     }
@@ -45,12 +63,8 @@ public class UserRateLimiterFilter implements WebFilter {
                 .map(SecurityContext::getAuthentication)
                 .filter(Authentication::isAuthenticated)
                 .map(Authentication::getPrincipal)
+                .filter(principal -> principal instanceof CustomUserDetails)
                 .cast(CustomUserDetails.class)
                 .map(CustomUserDetails::getEmail);
-    }
-
-    private Mono<Void> reject(ServerWebExchange exchange) {
-        exchange.getResponse().setStatusCode(HttpStatus.TOO_MANY_REQUESTS);
-        return exchange.getResponse().setComplete();
     }
 }
